--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -v -s --alluredir=allure --clean-alluredir --timeout=120000
+addopts = -v -s --alluredir=allure --clean-alluredir
 
